--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     },
     "dependencies": {
         "@inertiajs/vue3": "^2.0.3",
-        "@vitejs/plugin-vue": "^5.2.1"
+        "@vitejs/plugin-vue": "^5.2.1",
+        "vue-i18n": "^10.0.5"
     }
 }
