--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     },
     "dependencies": {
         "@inertiajs/vue3": "^2.0.3",
+        "@preline/select": "^2.5.2",
         "@vitejs/plugin-vue": "^5.2.1",
+        "preline": "^2.7.0",
         "vue-i18n": "^10.0.5"
     }
 }
