--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "vue": "^3.4.0"
     },
     "dependencies": {
+        "@inertiajs/inertia": "^0.11.1",
         "@inertiajs/vue3": "^2.0.3",
         "@preline/select": "^2.5.2",
         "@vitejs/plugin-vue": "^5.2.1",
