--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "@inertiajs/vue3": "^2.0.3",
         "@preline/select": "^2.5.2",
         "@vitejs/plugin-vue": "^5.2.1",
+        "dayjs": "^1.11.13",
         "preline": "^2.7.0",
         "vue-i18n": "^10.0.5"
     }
