--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "@preline/select": "^2.5.2",
         "@vitejs/plugin-vue": "^5.2.1",
         "dayjs": "^1.11.13",
+        "firebase": "^11.5.0",
         "preline": "^2.7.0",
         "vue-i18n": "^10.0.5"
     }
