--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "@vitejs/plugin-vue": "^5.2.1",
         "dayjs": "^1.11.13",
         "firebase": "^11.5.0",
+        "glightbox": "^3.3.1",
         "preline": "^2.7.0",
         "vue-i18n": "^10.0.5"
     }
