--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "dayjs": "^1.11.13",
         "firebase": "^11.5.0",
         "glightbox": "^3.3.1",
+        "pinia": "^3.0.3",
         "preline": "^2.7.0",
         "vue-i18n": "^10.0.5"
     }
